Refactor: Replace explicit types with `var` in `TemplateServiceImpl` for improved readability